<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_pop_background"
    android:layout_alignParentBottom="true"
	android:layout_alignParentLeft="true"
	android:layout_alignParentRight="true"
    android:orientation="vertical" >
    
    <!-- 标题栏 -->
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical">
    	
        
    	<TextView 
			android:id="@+id/text_title"
			android:gravity="center"
		   	android:layout_width="300dp"
		    android:layout_height="wrap_content"
		    android:text="@string/label_audio_record"
		    style="@style/font_pop_title"/>
        
        
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/blue_bg"/>
        
        
    </LinearLayout>
    
    <LinearLayout 
    	android:layout_gravity="center_horizontal|bottom"
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
        
        <FrameLayout 
            android:layout_margin="20dp"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView 
                android:layout_gravity="center"
	            android:visibility="invisible"
	            android:id="@+id/img_voice_flag"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/img_micphone"/>
        
        	<ImageButton 
        	    android:layout_gravity="center"
	            android:id="@+id/btn_audio_playback"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:background="@android:drawable/ic_media_play"/>
        </FrameLayout>
        
        
        
        <com.george.focuslight.poppanel.InterphoneButton 
            android:layout_marginRight="20dp"
            android:id="@+id/btn_interphone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            style="@style/font_btn_pop"/>
    </LinearLayout>
    
    <LinearLayout 
    	android:layout_gravity="center_horizontal|bottom"
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:weightSum="2">
	        
        <Button
        	android:layout_weight="1"
		    android:id="@+id/btn_audio_cancel"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/btn_cancel"
		    style="@style/font_btn_pop"/>
	        
		<Button
	        android:layout_weight="1"
		    android:id="@+id/btn_audio_send"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/btn_send"
		    style="@style/font_btn_pop"/>
            
	</LinearLayout>
    

</LinearLayout>